--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
-    "vite": "^6.2.0",
-    "vite-plugin-gh-pages": "^1.0.1"
+    "vite": "^6.2.0"
   }
 }
